specs/001-typescript-to-zig-native/examples/valid/named-type.ts
type User = { id: int };
let user: User = { id: 7 };

console.log(user.id);
