specs/001-typescript-to-zig-native/examples/invalid/named-type-field-mismatch.ts
type User = { id: int };
let user: User = { id: "nope" };
